pridanie classov pre recepty a recept repository
pripojenie na databazu, vytvorenie recepetov v databaze, ukazka receptov podla pouzivatela v databaze

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/green"
     android:padding="24dp"
-    tools:context=".AuthActivity">
+    tools:context=".auth.AuthActivity">
 
     <!-- Nadpis -->
     <TextView
