--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="purple">#56188f</color>
     <color name="orange">#8f490b</color>
     <color name="green">#154211</color>
+    <color name="red">#870c09</color>
 
 </resources>
