--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -11,5 +11,13 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
         android:gravity="center"/>
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOG OUT"
+        android:layout_gravity="top|right"
+
+        />
 
 </FrameLayout>
