improved authentication, storing users in database, basic profile, improved visuals
storing user data between sessions

--- a/app/src/main/res/drawable/input_background.xml
+++ b/app/src/main/res/drawable/input_background.xml
@@ -4,6 +4,6 @@
 
     <solid android:color="@color/white"/>  <!-- Farba pozadia -->
     <corners android:radius="12dp"/>       <!-- Zaoblené rohy -->
-    <stroke android:width="2dp" android:color="@color/green"/> <!-- Okraj -->
+    <stroke android:width="2dp" android:color="@color/dark_moss_green"/> <!-- Okraj -->
     <padding android:left="12dp" android:right="12dp"/> <!-- Padding -->
 </shape>
