--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <item android:id="@+id/nav_home"
-        android:icon="@drawable/baseline_home_24"
-        android:title="Home"
+        android:icon="@drawable/icon_home"
+        android:title="@string/nav_home"
         />
     <item android:id="@+id/nav_search"
-        android:icon="@drawable/baseline_search_24"
-        android:title="Search"
+        android:icon="@drawable/icon_search"
+        android:title="@string/nav_search"
         />
     <item android:id="@+id/nav_myRecipes"
-        android:icon="@drawable/outline_article_24"
-        android:title="My Recipes"
+        android:icon="@drawable/icon_myrecipes"
+        android:title="@string/nav_myRecipes"
         />
     <item android:id="@+id/nav_profile"
-        android:icon="@drawable/baseline_person_24"
-        android:title="Profile"
+        android:icon="@drawable/icon_profile"
+        android:title="@string/nav_profile"
         />
 </menu>
