--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Nezafoodaj" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Nezafoodaj" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/dark_moss_green</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/salmon_pink</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSurface">@color/dark_moss_green</item> <!-- Toolbars -->
+        <item name="colorOnSurface">@color/straw</item>     <!-- Icons on toolbars -->
+
+
     </style>
 
     <style name="Theme.Nezafoodaj" parent="Base.Theme.Nezafoodaj" />
